finially fix the gap problem of the markdown, noice

--- a/src/pages/Software/SoftwareProjectDetailPage.module.css
+++ b/src/pages/Software/SoftwareProjectDetailPage.module.css
@@ -271,6 +271,9 @@ ul {
     font-size: 14px;
 }
 ul li {
-    margin-bottom: 25px;
     line-height: 1.5;
+}
+
+.markdown{
+    white-space: inherit;
 }
